<resources>
    <string name="app_name">Netflix</string>
    <string name="menu_mensagem">Mensagem</string>
    <string name="menu_volume">Volume</string>
    <string name="manu_avaliacoes">Avaliações</string>
    <string name="menu_episodios">Episódios</string>
    <string name="menu_titulo">La Casa de Papel</string>
    <string name="temporada_episodio">S1:E2</string>
    <string name="imagem_descricao">La Casa de Papel</string>
</resources>